--- a/pass-recovery.html
+++ b/pass-recovery.html
@@ -13,13 +13,13 @@
                         <img src="img/Lock.svg">
                     </p>
                     <h4>Восстановление пароля</h4>
-                    <div class="user-data">
+                    <form class="user-data">
                         <div>
                             <p>Email</p>
-                            <input id="user-data__mail" type="text">
+                            <input id="user-data__mail" type="text" required>
                         </div>
-                    </div>
-                    <input class="login-btn" type="button" value="Восстановить пароль">
+                        <input class="login-btn" type="submit" value="Восстановить пароль">
+                    </form>
                 </div>
                 <div class="interactive-field__alt">
                     <p>Обратно к <a href="auth.html">Авторизации</a></p>
