--- a/reg.html
+++ b/reg.html
@@ -20,19 +20,19 @@
                         <hr>
                         <span>Или через электронную почту</span>
                     </div>
-                    <div class="user-data">
+                    <form class="user-data">
                         <div>
                             <p>ФИО</p>
-                            <input type="text">
+                            <input id="user-data__fullname" type="text" required>
                         </div>
                         <div>
                             <p>Email</p>
-                            <input id="user-data__mail" type="text">
+                            <input id="user-data__mail" type="text" required>
                         </div>
                         <div>
                             <p>Пароль</p>
                             <div class="password-input">
-                                <input type="password">
+                                <input type="password" required>
                                 <label>
                                     <input type="checkbox">
                                     <span></span>
@@ -42,21 +42,21 @@
                         <div>
                             <p>Подтверждение пароля</p>
                             <div class="password-input">
-                                <input type="password">
+                                <input type="password" required>
                                 <label>
                                     <input type="checkbox">
                                     <span></span>
                                 </label>
                             </div>
                         </div>
-                    </div>
-                    <div class="input-field__lose">
-                        <label class="input-field__remember">
-                            <input type="checkbox">
-                            <p>Принимаю условия <a>Политики конфиденциальности</a></p>
-                        </label>
-                    </div>
-                    <input class="login-btn" type="button" value="Зарегистрироваться">
+                        <div class="input-field__lose">
+                            <label class="input-field__remember">
+                                <input type="checkbox">
+                                <p>Принимаю условия <a>Политики конфиденциальности</a></p>
+                            </label>
+                        </div>
+                        <input class="login-btn" type="submit" value="Зарегистрироваться">
+                    </form>
                 </div>
                 <div class="interactive-field__alt">
                     <p>Уже есть аккаунт? <a href="auth.html">Войти</a></p>
