--- a/pass-recovery.html
+++ b/pass-recovery.html
@@ -16,7 +16,7 @@
                     <form class="user-data">
                         <div>
                             <p>Email</p>
-                            <input id="user-data__mail" type="text" required>
+                            <input id="user-data__mail" type="email" required placeholder="cooper@example.com">
                         </div>
                         <input class="login-btn" type="submit" value="Восстановить пароль">
                     </form>
