change font, split styles on separate parts

--- a/auth.html
+++ b/auth.html
@@ -2,15 +2,19 @@
 <html>
     <head>
         <title>Rocket</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <link rel="icon" href="public/favicon.ico" type="image/png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+        
+        <link rel="stylesheet" href="css/gogle-btn.css" type="text/css">
+        <link rel="stylesheet" href="css/login-btn.css" type="text/css">
+        <link rel="stylesheet" href="css/hr-text-middle.css" type="text/css">
     </head>
     <body id="auth">
         <div class="container">
-            <p class="illustration-box">
+            <span class="illustration-box">
                 <img id="illustration" src="img/Illustration.svg" alt="Иллюстрация бизнес-сферы">
-            </p>
+            </span>
             
             <div class="interactive-field">
                 <div class="interactive-field__dataio">
@@ -21,7 +25,7 @@
                         </div>
                         <p>Войти через Google</p>
                     </div>
-                    <div class="separator">
+                    <div class="hr-text-middle">
                         <hr>
                         <span>Или через электронную почту</span>
                     </div>
@@ -47,7 +51,7 @@
                             </label>
                             <a href="pass-recovery.html">Забыли пароль?</a>
                         </div>
-                        <div class="input-field__lose__mobile">
+                        <div class="input-field__lose__mobile" style="display: none;">
                             <a href="pass-recovery.html">Забыли пароль?</a>
                         </div>
                         <input class="login-btn" type="submit" value="Войти">
