--- a/pass-recovery.html
+++ b/pass-recovery.html
@@ -4,6 +4,8 @@
         <title>Rocket</title>
         <link rel="icon" href="public/favicon.ico" type="image/png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
+
+        <link rel="stylesheet" href="css/login-btn.css" type="text/css">
     </head>
     <body id="pass-rec">
         <div class="container">
