--- a/reg.html
+++ b/reg.html
@@ -4,7 +4,11 @@
         <title>Rocket</title>
         <link rel="icon" href="public/favicon.ico" type="image/png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+
+        <link rel="stylesheet" href="css/gogle-btn.css" type="text/css">
+        <link rel="stylesheet" href="css/login-btn.css" type="text/css">
+        <link rel="stylesheet" href="css/hr-text-middle.css" type="text/css">
     </head>
     <body id="reg">
         <div class="container">
@@ -17,7 +21,7 @@
                         </div>
                         <p>Войти через Google</p>
                     </div>
-                    <div class="separator">
+                    <div class="hr-text-middle">
                         <hr>
                         <span>Или через электронную почту</span>
                     </div>
