--- a/pass-change.html
+++ b/pass-change.html
@@ -5,6 +5,8 @@
         <link rel="icon" href="public/favicon.ico" type="image/png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+
+        <link rel="stylesheet" href="css/login-btn.css" type="text/css">
     </head>
     <body id="pass-chg">
         <div class="container">
