fix input-field__lose__mobile position

--- a/auth.html
+++ b/auth.html
@@ -51,13 +51,13 @@
                             </label>
                             <a href="pass-recovery.html">Забыли пароль?</a>
                         </div>
-                        <div class="input-field__lose__mobile" style="display: none;">
+                        <input class="login-btn" type="submit" value="Войти">
+                        <div class="input-field__lose__mobile">
                             <a href="pass-recovery.html">Забыли пароль?</a>
                         </div>
-                        <input class="login-btn" type="submit" value="Войти">
                     </form>
                 </div>    
-                <div class="interactive-field__alt">
+                <div class="guide-field">
                     <p>Ещё нет аккаунта? <a href="reg.html">Зарегистрироваться</a></p>
                 </div>
             </div>
