--- a/pass-change.html
+++ b/pass-change.html
@@ -65,6 +65,7 @@
                 confirmationPassword = document.getElementById('password-data__input__confirmation');
 
                 if(password.value != confirmationPassword.value){
+                    alert("Пароли не совпадают!");
                     return false;
                 }
 
